crates/tuna/tests/parser/fail/big-int-literal.som
"test:
fail-message:
  - contains: number literal
  - contains: too large
"

BigIntLiteral = (
  run = (
    ^9223372036854775808.
  )
)
